cabal-version:      2.4
name:               AdventOfCode2023
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    README.md

common shared-settings
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.17.2.0
                    , text
    default-language: Haskell2010

executable Day1Problem1
    import:           shared-settings
    main-is:          problems/day1/Problem1.hs

executable Day1Problem2
    import:           shared-settings
    main-is:          problems/day1/Problem2.hs

executable Day2Problem1
    import:           shared-settings
    main-is:          problems/day2/Problem1.hs
    build-depends:    parsec
                    , parsec-numbers
                    , containers

executable Day2Problem2
    import:           shared-settings
    main-is:          problems/day2/Problem2.hs
    build-depends:    parsec
                    , parsec-numbers
                    , containers