cabal-version:      2.4
name:               AdventOfCode2023
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    README.md

common shared-settings
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.17.2.0
                    , text
    default-language: Haskell2010

executable Day1Problem1
    import:           shared-settings
    main-is:          problems/day1/Problem1.hs

executable Day1Problem2
    import:           shared-settings
    main-is:          problems/day1/Problem2.hs

executable Day2Problem1
    import:           shared-settings
    main-is:          problems/day2/Problem1.hs
    build-depends:    parsec
                    , parsec-numbers
                    , containers

executable Day2Problem2
    import:           shared-settings
    main-is:          problems/day2/Problem2.hs
    build-depends:    parsec
                    , parsec-numbers
                    , containers

executable Day3Problem1
    import:           shared-settings
    main-is:          problems/day3/Problem1.hs
    build-depends:    parsec
                    , parsec-numbers
                    , containers

executable Day3Problem2
    import:           shared-settings
    main-is:          problems/day3/Problem2.hs
    build-depends:    parsec
                    , parsec-numbers
                    , containers

executable Day4Problem1
    import:           shared-settings
    main-is:          problems/day4/Problem1.hs
    build-depends:    parsec
                    , parsec-numbers
                    , containers

executable Day4Problem2
    import:           shared-settings
    main-is:          problems/day4/Problem2.hs
    build-depends:    parsec
                    , parsec-numbers
                    , containers

executable Day5Problem1
    import:           shared-settings
    main-is:          problems/day5/Problem1.hs
    build-depends:    parsec
                    , parsec-numbers
                    , containers

executable Day5Problem2
    import:           shared-settings
    main-is:          problems/day5/Problem2.hs
    build-depends:    parsec
                    , parsec-numbers
                    , containers

executable Day6Problem1
    import:           shared-settings
    main-is:          problems/day6/Problem1.hs
    build-depends:    parsec
                    , parsec-numbers
                    , containers

executable Day6Problem2
    import:           shared-settings
    main-is:          problems/day6/Problem2.hs
    build-depends:    parsec
                    , parsec-numbers
                    , containers

executable Day7Problem1
    import:           shared-settings
    main-is:          problems/day7/Problem1.hs
    build-depends:    parsec
                    , parsec-numbers
                    , containers

executable Day7Problem2
    import:           shared-settings
    main-is:          problems/day7/Problem2.hs
    build-depends:    parsec
                    , parsec-numbers
                    , containers

executable Day8Problem1
    import:           shared-settings
    main-is:          problems/day8/Problem1.hs
    build-depends:    parsec
                    , parsec-numbers
                    , containers

executable Day8Problem2
    import:           shared-settings
    main-is:          problems/day8/Problem2.hs
    build-depends:    parsec
                    , parsec-numbers
                    , containers

executable Day9Problem1
    import:           shared-settings
    main-is:          problems/day9/Problem1.hs
    build-depends:    parsec
                    , parsec-numbers
                    , containers
                    , hmatrix

executable Day9Problem2
    import:           shared-settings
    main-is:          problems/day9/Problem2.hs
    build-depends:    parsec
                    , parsec-numbers
                    , containers
                    , hmatrix

executable Day10Problem1
    import:           shared-settings
    main-is:          problems/day10/Problem1.hs
    build-depends:    parsec
                    , parsec-numbers
                    , containers

executable Day10Problem2
    import:           shared-settings
    main-is:          problems/day10/Problem2.hs
    build-depends:    parsec
                    , parsec-numbers
                    , containers